<resources>
    <string name="app_name">RaceStorm</string>

    <string name="Start">Start</string>
    <string name="Options">Optionen</string>
    <string name="About">About</string>
    <string name="Raus">Ich will raus</string>
    <string name="Back">Zurück</string>

    <string name="OptionenSprache">Sprache</string>
    <string name="OptionenThemen">Themen</string>
    <string name="OptionenSteuerung">Steuerung</string>

    <string name="SteuerungLinks">Links</string>
    <string name="SteuerungRechts">Rechts</string>
    <string name="SteuerungGas">Gas</string>

    <string name="BluetoothStart">Los gehts</string>

    <string name="AboutText1">
        Hallo Nutzer!</string>

     <string name="AboutText2">
        Mit dieser App kannst du einen LEGO MINDSTORMS NXT Roboter kontrollieren.</string>

    <string name="AboutText3">
        Entwickler:
        Lars,
        Benedikt,
        Ersin,
        Tatjana
    </string>

</resources>
