<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:text="@string/SteuerungLinks"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnLinks" />

    <Button
        android:text="@string/SteuerungRechts"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnRechts" />

    <Button
        android:text="@string/SteuerungGas"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_above="@id/btnRechts"
        android:id="@+id/btnGas" />

    <Button
        android:text="Rückwärts"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:id="@+id/btnBack"/>


</RelativeLayout>